# redline

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  nixpacks.toml  pyproject.toml
backend/app/: db.py  main.py  middleware.py  schemas.py
backend/app/cli/: __init__.py  prune.py
backend/app/prompts/: analyze.py  extract.py  overview.py
backend/app/routers/: account.py  analyses.py  analyze.py  auth.py  export.py  search.py  upload.py
backend/app/services/: analyzer.py  auth.py  email.py  exporter.py  ocr.py  parser.py  retention.py  semantic_search.py  transparency.py
backend/migrations/: 001_initial_schema.sql  002_provenance.sql  003_retention.sql  004_deleted_accounts.sql  005_embeddings_dim_and_index.sql
backend/tests/: conftest.py  test_account.py  test_analyses.py  test_analyze_endpoint.py  test_analyzer.py  test_auth.py  test_auth_service.py  test_email.py  test_export_endpoint.py  test_exporter.py  test_health.py  test_ocr.py  test_parser.py  test_schemas.py  test_search.py  test_upload.py
docs/superpowers/plans/: 2026-04-09-redline-implementation.md  2026-04-10-contract-summary-unusual-clauses.md  2026-04-10-ux-redesign.md
docs/superpowers/specs/: 2026-04-09-redline-design.md  (+2 more)
frontend/: .env.example  EVAL.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/messages/: de.json  en.json  es.json  fr.json  it.json  nl.json
frontend/scripts/: backfill-fixture-cross-refs.mjs  deepl-seed.mjs
frontend/src/: middleware.ts
(+273 files in other folders)
